docs/apache-airflow-providers-google/10.21.0/_sources/_api/tests/system/providers/google/cloud/cloud_build/example_cloud_build_trigger/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger`
=====================================================================================

.. py:module:: tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger

.. autoapi-nested-parse::

   Example Airflow DAG that displays interactions with Google Cloud Build.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'example_gcp_cloud_build_trigger'

   

.. py:data:: GCP_SOURCE_REPOSITORY_NAME
   :value: 'test-cloud-build-repo'

   

.. py:data:: TRIGGER_NAME

   

.. py:data:: create_build_trigger_body

   

.. py:data:: update_build_trigger_body

   

.. py:data:: create_build_from_repo_body
   :type: dict[str, Any]

   

.. py:data:: create_build_trigger

   

.. py:data:: test_run

   

