docs/apache-airflow-providers-google/10.23.0/_sources/_api/tests/system/providers/google/cloud/cloud_build/example_cloud_build_trigger/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger`
=====================================================================================

.. py:module:: tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger

.. autoapi-nested-parse::

   Example Airflow DAG that displays interactions with Google Cloud Build.



Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.get_project_number



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.ENV_ID
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.PROJECT_ID
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.DAG_ID
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.GCP_SOURCE_REPOSITORY_NAME
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.TRIGGER_NAME
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.PROJECT_NUMBER
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.create_build_trigger_body
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.update_build_trigger_body
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.create_build_from_repo_body
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.create_build_trigger
   tests.system.providers.google.cloud.cloud_build.example_cloud_build_trigger.test_run


.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'gcp_cloud_build_trigger'

   

.. py:data:: GCP_SOURCE_REPOSITORY_NAME
   :value: 'test-cloud-build-repository'

   

.. py:data:: TRIGGER_NAME

   

.. py:data:: PROJECT_NUMBER
   :value: "{{ task_instance.xcom_pull('get_project_number') }}"

   

.. py:data:: create_build_trigger_body

   

.. py:data:: update_build_trigger_body

   

.. py:data:: create_build_from_repo_body
   :type: dict[str, Any]

   

.. py:function:: get_project_number()

   Helper function to retrieve the number of the project based on PROJECT_ID


.. py:data:: create_build_trigger

   

.. py:data:: test_run

   

